--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-kata-starter",
+  "name": "diamond",
   "version": "1.0.0",
-  "description": "Starter project for kata (Node, TypeScript, Jest)",
+  "description": "The diamond kata",
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --config --coverage jest.config.json",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mathieueveillard/js-kata-starter.git"
+    "url": "git+https://github.com/mathieueveillard/diamond.git"
   },
   "keywords": [
     "starter",
@@ -35,7 +35,11 @@
   "author": "Mathieu Eveillard",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mathieueveillard/js-kata-starter/issues"
+    "url": "https://github.com/mathieueveillard/diamond/issues"
   },
-  "homepage": "https://github.com/mathieueveillard/js-kata-starter#readme"
+  "homepage": "https://github.com/mathieueveillard/diamond#readme",
+  "dependencies": {
+    "@types/memoizee": "^0.4.7",
+    "memoizee": "^0.4.15"
+  }
 }
